--- a/application/admin/view/admin/product_list.html
+++ b/application/admin/view/admin/product_list.html
@@ -125,7 +125,8 @@
 
     ws.onmessage = function (evt)
     {
-        console.log(evt.data);
+        console.log(evt);
+//        console.log(evt.data);
         var data=JSON.parse(evt.data);
         $.each(data,function(k,v){
             var id='#'+k;
