--- a/application/index/view/user/withdraw.html
+++ b/application/index/view/user/withdraw.html
@@ -246,7 +246,7 @@
             }
         </style>
         <div class="assets_content w900 right bg_w mh1500">
-            <h1>可用余额:{$info.money|number_format=###,2,".",""}</h1>
+            <h1>可用余额:{$real_money|number_format=###,2,".",""}</h1>
             <form class="layui-form">
                 <div class="new_list">
                     <ul>
