--- a/public/static/index/css/app.css
+++ b/public/static/index/css/app.css
@@ -12482,7 +12482,8 @@ input[type=number] {
 	-ms-appearance: radio;
 	width: 18px;
 	height: 18px;
-	margin-right: 3px
+	margin-right: 3px;
+    margin-top: 10px;
 }
 
 .index .indexCon .indexleft .leftbtm .chose .itemcon[data-v-c4371006] {
@@ -12800,7 +12801,7 @@ input[type=number] {
 
 .index .indexCon .indexright .itemcon[data-v-c4371006] {
 	width: 100%;
-	height: 658px;
+	height: 810px;
 	position: relative;
 	margin-top: 10px;
 	box-sizing: border-box;
@@ -12813,7 +12814,7 @@ input[type=number] {
 	top: 0;
 	right: 0;
 	box-sizing: border-box;
-	height: 658px;
+	height: 810px;
 	border: 1px solid #353a59;
 	font-size: 14px
 }
@@ -12880,7 +12881,7 @@ input[type=number] {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	top: 42px
+	top: 15px
 }
 
 .index .indexCon .indexright .itemcon .itemleft .kline #tv_chart_container[data-v-c4371006] {
