--- a/application/admin/view/admin/product_add.html
+++ b/application/admin/view/admin/product_add.html
@@ -108,6 +108,18 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label for="night_fee" class="layui-form-label">
+                       过夜费
+            </label>
+            <div class="layui-input-inline"  >
+                <input type="number" id="night_fee" name="night_fee" required="" lay-verify="number"
+                       autocomplete="off" class="layui-input" >
+            </div>
+            <div class="layui-form-mid layui-word-aux">
+                /1手
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">
             </label>
             <button  class="layui-btn" lay-filter="add" lay-submit="">
