--- a/public/static/index/css/app.css
+++ b/public/static/index/css/app.css
@@ -12406,7 +12406,7 @@ input[type=number] {
 
 .index .indexCon .indexleft .lefttop[data-v-c4371006] {
 	width: 100%;
-	height: 80px;
+	height: 9rem;
 	box-sizing: border-box;
 	border: 1px solid #353a59;
 	padding-left: 18px
