--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -970,7 +970,7 @@
 
         $('.stop_loss').text(now_price-wave_val);
         $('input[name="stop_loss"]').val(now_price-wave_val);
-
+        countRange(now_price,name);
         setCandlestick(name,"day",30);
     });
 
@@ -978,12 +978,14 @@
         $(this).addClass("active");
         $(this).siblings().removeClass("active");
     });
+    //建仓确认按钮
     $(".btn .btnsure").click(function () {
         $('.promise_money').text(0.00);
         $(".models").show();
         $('.shosu').val('').focus();
 
     });
+    //建仓取消按钮
     $(".models .m-cancel").click(function () {
         if( $("input[name='target_profit_check']").is(':checked') ){
             $("input[name='target_profit_check']").removeAttr('checked');
@@ -1000,10 +1002,12 @@
 
         $(".models").hide();
     });
+    //设置建仓方向
     function set_direction(val,number){
         $('.order_direction').text(val);
         $('.form_direction').val(number);
     }
+    //手数失焦事件，必须数字，并计算保证金
     $(".models .shosu").blur(function () {
         var vals=$(this).val();
         if(isNotANumber(vals)==true){
@@ -1122,13 +1126,28 @@
             }
         }
     }
+    var openPrice = [];
+    function countRange(nowPrice,productAbbreviation){
+        var range=nowPrice-openPrice[productAbbreviation];
+        var range_per=range/openPrice[productAbbreviation]*100;
+        var up_down_name=  "[data-product-up-down="+productAbbreviation+"]";
+        var up_down_val_name=  "[data-product-up-down-val="+productAbbreviation+"]";
+        var color;
+        if(nowPrice>openPrice[productAbbreviation]){
+            color='red';
+        }else if(nowPrice<openPrice[productAbbreviation]){
+            color='green';
+        }
+        $(up_down_val_name).text(math_floor(range)).attr("style","color:"+color+";");
+        $(up_down_name).text(math_floor(range_per)).parent().attr("style","color:"+color+";");
+    }
     $(function  () {
         var layer;
 		var loadingFirst;
 		var loadingSecond;
         function prepareWs(){
-            var openPrice = [];
-            var url = "http://47.90.122.200:8080/openPrice"
+            var url = "http://47.90.122.200:8080/openPrice";
+            //获取产品开盘价
             $.ajax({
                 type: 'get',
                 url: url,
@@ -1137,7 +1156,6 @@
                     for(let i in data){
                         openPrice[i] =data[i]['USD'];
                     }
-
                 },
                 error : function(errMsg) {
                     //不知道该干啥
@@ -1146,7 +1164,43 @@
                     });
                 }
             });
+            //计算涨幅跌幅
 
+            $(".list ul li").click(function () {
+                $(this).addClass("active");
+                $(this).siblings().removeClass("active");
+                //产品名称
+                var name= $(this).attr('data-product-abbreviation-name');
+                var now_price=$(this).find('.l').text();
+                $('.product_name').text($(this).children('.title').text());
+                $('.product_price_change').attr('data-product-abbreviation',name).text(now_price);
+                $('.up_down_val').attr('data-product-up-down-val',name);
+                $('.up_down').attr('data-product-up-down',name);
+                var form_id='#'+name+'_id';
+                var contract_id='#'+name+'_contract';
+                var min_hand_id='#'+name+'_min_hand';
+                var fee_id='#'+name+'_fee';
+                var wave_id='#'+name+'_wave';
+
+                var form_id_val=$(form_id).val();
+                var contract_val=$(contract_id).val();
+                var min_hand_val=$(min_hand_id).val();
+                var fee_val=$(fee_id).val();
+                var wave_val=$(wave_id).val();
+                $('.contract').text(contract_val);
+                $('.min_hand').text(min_hand_val);
+                $('.fee').text(fee_val);
+                $('.point_wave').val(wave_val);
+                $('.form_id').val(form_id_val);
+
+                $('.target_profit').text(now_price-(-wave_val));
+                $('input[name="target_profit"]').val(now_price-(-wave_val));
+
+                $('.stop_loss').text(now_price-wave_val);
+                $('input[name="stop_loss"]').val(now_price-wave_val);
+                countRange(now_price,name);
+                setCandlestick(name,"day",30);
+            });
             var uid="{$user.uid}";
             var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid="+uid);
 
@@ -1181,29 +1235,13 @@
                     var active_name = $('.list ul li.active').attr('data-product-abbreviation-name');
                     $.each(data,function(k,v){
                         var abbreviation='.'+k;//固定产品位置
-//                    var abbreviation_up_down='.'+k+'_up_down';
-//                    var abbreviation_up_down_val='.'+k+'_up_down_val';
-                        var up_down_name=  "[data-product-up-down="+k+"]";
-                        var up_down_val_name=  "[data-product-up-down-val="+k+"]";
                         var new_price=v['USD'];
                         if(k==active_name){
+                            //计算止盈止损
                             count_wave(new_price);
                         }
-                        //var old_price=$(abbreviation).html();
-                        var old_price= openPrice[k];
-                        if(old_price!=0){
-                            var range=new_price-old_price;
-                            var range_per=range/old_price*100;
-                            var color;
-                            if(new_price>old_price){
-                                color='red';
-                            }else if(new_price<old_price){
-                                color='green';
-                            }
-                            $(up_down_val_name).text(math_floor(range)).attr("style","color:"+color+";");
-                            $(up_down_name).text(math_floor(range_per)).parent().attr("style","color:"+color+";");
-                        }
-
+                        //计算涨幅跌幅
+                        countRange(new_price,k);
                         $(abbreviation).text(new_price);
                         //变化的产品位置
                         var name=  "[data-product-abbreviation="+k+"]";
