--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -217,7 +217,7 @@
         <p>
             <span style="color: rgb(227, 108, 9);">
             <span style="font-size: 16px;">风险提示&nbsp;</span>
-            数字货币交易具有极高的风险（预挖、暴涨暴跌、庄家操控、团队解散、技术缺陷等），据国家五部委《关于防范比特币风险的通知》，aioq.cn艾比特交易平台仅为数字货币的爱好者提供一个自由的网上交换平台，对币的投资价值不承担任何审查、担保、赔偿的责任，如果您不能接受，请不要进行交易！</span>
+            数字货币交易具有一定的风险（预挖、暴涨暴跌、庄家操控、团队解散、技术缺陷等），据国家五部委《关于防范比特币风险的通知》，aioq.cn艾比特交易平台仅为数字货币的爱好者提供一个自由的网上交换平台，对币的投资价值不承担任何审查、担保、赔偿的责任，如果您不能接受，请不要进行交易！</span>
         </p>
     </div>
 </div>
@@ -648,7 +648,7 @@
 </html>
 
 <script type="text/javascript">
-    var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=2");
+    var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=3");
 
     ws.onopen = function()
     {
